--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "repository": "https://github.com/Jeff-411/c-outlook",
   "license": "MIT",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.19.2"
   }
 }
